--- a/src/templates/cross_browser.html
+++ b/src/templates/cross_browser.html
@@ -8,6 +8,46 @@
 <body>
 <div class="back_main">
     <div class="container">
+        <div class="rad">
+            <div class="icon"></div>
+            <div class="icon one"></div>
+            <div class="icon two"></div>
+            <div class="icon three"></div>
+            <div class="icon four"></div>
+        </div>
+
+        <div class="rad_2">
+            <div class="icon" id="second_icon_one"></div>
+            <div class="icon one" id="second_icon_two"></div>
+            <div class="icon two" id="second_icon_three"></div>
+            <div class="icon three" id="second_icon_four"></div>
+            <div class="icon four" id="second_icon_five"></div>
+        </div>
+
+        <div class="rad_3">
+            <div class="icon" id="third_icon_one"></div>
+            <div class="icon one" id="third_icon_two"></div>
+            <div class="icon two" id="third_icon_three"></div>
+            <div class="icon three" id="third_icon_four"></div>
+            <div class="icon four" id="third_icon_five"></div>
+        </div>
+
+        <div class="rad_4">
+            <div class="icon" id="fourth_icon_one"></div>
+            <div class="icon one" id="fourth_icon_two"></div>
+            <div class="icon two" id="fourth_icon_three"></div>
+            <div class="icon three" id="fourth_icon_four"></div>
+            <div class="icon four" id="fourth_icon_five"></div>
+        </div>
+
+        <div class="rad_5">
+            <div class="icon" id="fifth_icon_one"></div>
+            <div class="icon one" id="fifth_icon_two"></div>
+            <div class="icon two" id="fifth_icon_three"></div>
+            <div class="icon three" id="fifth_icon_four"></div>
+            <div class="icon four" id="fifth_icon_five"></div>
+        </div>
+
     </div>
 </div>
 </body>
