--- a/src/templates/cross_browser.html
+++ b/src/templates/cross_browser.html
@@ -48,6 +48,12 @@
             <div class="icon four" id="fifth_icon_five"></div>
         </div>
 
+        <div class="rad_6">
+            <div class="icon" id="sixth_icon_one"></div>
+            <div class="icon one" id="sixth_icon_two"></div>
+            <div class="icon two" id="sixth_icon_three"></div>
+            <div class="icon three" id="sixth_icon_four"></div>
+        </div>
     </div>
 </div>
 </body>
