--- a/src/static/css/cross_browser.css
+++ b/src/static/css/cross_browser.css
@@ -417,17 +417,18 @@
 @media only screen and (min-width: 320px) and (max-width: 568px) {
     .back_main {
         background: url(../img/images/iphone5-vertical.png) no-repeat;
-        width: 1000px;
-        height: 1800px;
+        background-size: 100% 100%;
+        width: 500px;
+        height: 900px;
     }
 
     .container {
         background: url(../img/images/background.jpg);
         background-size: 100% 100%;
         position: absolute;
-        top: 328px;
-        left: 184px;
-        height: 1136px;
-        width: 640px;
+        top: 164px;
+        left: 92px;
+        height: 568px;
+        width: 320px;
     }
 }
