Не правильное название  id. Переделал на валидные.

--- a/src/static/css/cross_browser.css
+++ b/src/static/css/cross_browser.css
@@ -374,23 +374,23 @@
     }
 
 
-    #six_icon_one {
-        background: url(../img/images/icons/Passbook.png);
+    #sixth_icon_one {
+        background: url(../img/images/icons/Burnable.png);
         background-size: 100% 100%;
     }
 
-    #six_icon_two {
-        background: url(../img/images/icons/Stocks.png);
+    #sixth_icon_two {
+        background: url(../img/images/icons/Calendar%20-%20Blank.png);
         background-size: 100% 100%;
     }
 
-    #six_icon_three {
-        background: url(../img/images/icons/Smart.png);
+    #sixth_icon_three {
+        background: url(../img/images/icons/Camera.png);
         background-size: 100% 100%;
     }
 
-    #six_icon_four {
-        background: url(../img/images/icons/RSS%20Notifier.png);
+    #sixth_icon_four {
+        background: url(../img/images/icons/Clock.png);
         background-size: 100% 100%;
     }
 
