--- a/src/templates/cross_browser.html
+++ b/src/templates/cross_browser.html
@@ -49,6 +49,12 @@
             <div class="icon four" id="fifth_icon_five"></div>
         </div>
 
+        <div class="switcher">
+            <input id="sw" type="checkbox" class="switcher-value">
+            <label for="sw" class="sw_btn"></label>
+            <div class="icon" id="sixth_icon_one"></div>
+        </div>
+
         <div class="rad_6">
             <div class="icon" id="sixth_icon_one"></div>
             <div class="icon one" id="sixth_icon_two"></div>
