--- a/src/templates/cross_browser.html
+++ b/src/templates/cross_browser.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Cross</title>
     <link rel="stylesheet" type="text/css" href="../static/css/cross_browser.css" media="screen">
 </head>
 <body>
@@ -47,12 +47,6 @@
             <div class="icon two" id="fifth_icon_three"></div>
             <div class="icon three" id="fifth_icon_four"></div>
             <div class="icon four" id="fifth_icon_five"></div>
-        </div>
-
-        <div class="switcher">
-            <input id="sw" type="checkbox" class="switcher-value">
-            <label for="sw" class="sw_btn"></label>
-            <div class="icon" id="sixth_icon_one"></div>
         </div>
 
         <div class="rad_6">
