поставил другие иконки а то совпадали с имеющимся

--- a/src/static/css/cross_browser.css
+++ b/src/static/css/cross_browser.css
@@ -378,22 +378,22 @@
 
 
     #sixth_icon_one {
-        background: url(../img/images/icons/Passbook.png);
+        background: url(../img/images/icons/Mail.png);
         background-size: 100% 100%;
     }
 
     #sixth_icon_two {
-        background: url(../img/images/icons/Stocks.png);
+        background: url(../img/images/icons/Calculator.png);
         background-size: 100% 100%;
     }
 
     #sixth_icon_three {
-        background: url(../img/images/icons/Smart.png);
+        background: url(../img/images/icons/Design%20Briefs.png);
         background-size: 100% 100%;
     }
 
     #sixth_icon_four {
-        background: url(../img/images/icons/RSS%20Notifier.png);
+        background: url(../img/images/icons/Drop%20Stuff.png);
         background-size: 100% 100%;
     }
 
@@ -771,22 +771,22 @@
 
 
     #sixth_icon_one {
-        background: url(../img/images/icons/Passbook.png);
+        background: url(../img/images/icons/Burnable.png);
         background-size: 100% 100%;
     }
 
     #sixth_icon_two {
-        background: url(../img/images/icons/Stocks.png);
+        background: url(../img/images/icons/EasyFind.png);
         background-size: 100% 100%;
     }
 
     #sixth_icon_three {
-        background: url(../img/images/icons/Smart.png);
+        background: url(../img/images/icons/Doo.png);
         background-size: 100% 100%;
     }
 
     #sixth_icon_four {
-        background: url(../img/images/icons/RSS%20Notifier.png);
+        background: url(../img/images/icons/Developer.png);
         background-size: 100% 100%;
     }
 }
