Нашел как сменить иконки

--- a/src/templates/cross_browser.html
+++ b/src/templates/cross_browser.html
@@ -9,6 +9,7 @@
 <body>
 <div class="back_main">
     <div class="container">
+        <input type="checkbox" class="switcher-value">
         <div class="rad">
             <div class="icon"></div>
             <div class="icon one"></div>
