--- a/src/static/css/cross_browser.css
+++ b/src/static/css/cross_browser.css
@@ -4,6 +4,18 @@
     margin: 0;
 }
 
+input.switcher-value:checked ~ .rad > .icon {
+    background: url(../img/images/icons/Misc%20Designs%2001.png);
+    background-size: 100% 100%;
+    position: absolute;
+}
+
+input.switcher-value:checked ~ .rad > .one {
+    background: url(../img/images/icons/Clock.png);
+    background-size: 100% 100%;
+    position: absolute;
+}
+
 /*iPad horizontal*/
 
 @media only screen and (min-width: 1024px) {
