--- a/src/templates/cross_browser.html
+++ b/src/templates/cross_browser.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div class="back_main">
-<input type="checkbox" class="switcher-value">
+<input type="radio" name="group" class="switcher-value" checked>
+<input type="radio" name="group" class="switcher-value-2">
     <div class="container">
         <div class="rad">
             <div class="icon"></div>
