--- a/src/static/css/cross_browser.css
+++ b/src/static/css/cross_browser.css
@@ -38,14 +38,11 @@ input.switcher-value:checked ~ .container > .rad > .four {
 input.switcher-value:checked ~ .container > .rad_2 > #second_icon_one {
     background: url(../img/images/icons/Reminders.png);
     background-size: 100% 100%;
-    /*position: absolute;*/
-    /*background-color: #1a1a1a;*/
-    /*width: 50px;*/
-    /*height: 50px;*/
+    position: absolute;
 }
 
-input.switcher-value:checked ~ .container + .rad_2 > .one {
-    background: url(../img/images/icons/Weather.png);
+input.switcher-value:checked ~ .container > .rad_2 > #second_icon_two {
+    background: url(../img/images/icons/Dictionary.png);
     background-size: 100% 100%;
     position: absolute;
 }
@@ -71,8 +68,16 @@ input.switcher-value:checked ~ .container + .rad_2 > .one {
 
     .switcher-value {
         position: absolute;
-        top: 100px;
-        left: 100px;
+        top: 850px;
+        left: 650px;
+        z-index: 1;
+    }
+
+    .switcher-value-2 {
+        position: absolute;
+        top: 850px;
+        left: 750px;
+        z-index: 1;
     }
 
     .rad {
